cedar-lean/UnitTest/parser_tests/negative/double_effect.cedar
permit forbid(principal, action, resource);
